Add EntityFrameworks elements. BEFORE TESTING MODEL.

--- a/DrinksDistributor.Models/DrinksDistributor.Models.csproj
+++ b/DrinksDistributor.Models/DrinksDistributor.Models.csproj
@@ -51,7 +51,26 @@
     <Compile Include="..\GlobalAssemblyVersion.cs">
       <Link>Properties\GlobalAssemblyVersion.cs</Link>
     </Compile>
+    <Compile Include="Data\DrinksDistributorDbInitializer.cs" />
+    <Compile Include="DrinksDistributorContext.cs" />
+    <Compile Include="Entities\CoinCurrency.cs" />
+    <Compile Include="Entities\CoinStock.cs" />
+    <Compile Include="Entities\CoinType.cs" />
+    <Compile Include="Entities\Drink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
