--- a/DrinksDistributor.Shell/DrinksDistributor.Shell.csproj
+++ b/DrinksDistributor.Shell/DrinksDistributor.Shell.csproj
@@ -104,5 +104,11 @@
       <DependentUpon>FormShell.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DrinksDistributor.Models\DrinksDistributor.Models.csproj">
+      <Project>{aaa33699-8e01-408c-83cf-421b11a1ada9}</Project>
+      <Name>DrinksDistributor.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
