--- a/DrinksDistributor.Shell/DrinksDistributor.Shell.csproj
+++ b/DrinksDistributor.Shell/DrinksDistributor.Shell.csproj
@@ -43,7 +43,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DrinksDistributor.Shell.ShellApp</StartupObject>
+    <StartupObject>DrinksDistributor.Shell.DrinksDistributorShellApp</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
@@ -81,25 +81,18 @@
     <Compile Include="..\GlobalAssemblyVersion.cs">
       <Link>Properties\GlobalAssemblyVersion.cs</Link>
     </Compile>
-    <Compile Include="Forms\FormShell.cs">
+    <Compile Include="DrinksDistributorModuleInit.cs" />
+    <Compile Include="DrinksDistributorShellForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormShell.Designer.cs">
-      <DependentUpon>FormShell.cs</DependentUpon>
+    <Compile Include="DrinksDistributorShellForm.Designer.cs">
+      <DependentUpon>DrinksDistributorShellForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\AppHelper.cs" />
-    <Compile Include="ShellApp.cs" />
+    <Compile Include="DrinksDistributorShellApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellWorkItem.cs" />
     <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -108,11 +101,15 @@
     <Content Include="Images\icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Forms\FormShell.resx">
-      <DependentUpon>FormShell.cs</DependentUpon>
+    <EmbeddedResource Include="DrinksDistributorShellForm.resx">
+      <DependentUpon>DrinksDistributorShellForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DrinksDistributor.Forms\DrinksDistributor.Forms.csproj">
+      <Project>{d28b628a-8be2-4c8e-bb5b-1374994434c9}</Project>
+      <Name>DrinksDistributor.Forms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DrinksDistributor.Models\DrinksDistributor.Models.csproj">
       <Project>{aaa33699-8e01-408c-83cf-421b11a1ada9}</Project>
       <Name>DrinksDistributor.Models</Name>
